--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/javaproject
-spring.datasource.username= root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://srv-bdens.insa-toulouse.fr:3306/projet_gei_051
+//jdbc:mysql://localhost:3306/javaproject
+spring.datasource.username=projet_gei_051
+spring.datasource.password=kom3he2A
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
 spring.jpa.generate-ddl = true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
